<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="@dimen/_300sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/btn_scan"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/rate_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/rate_content"
            android:textColor="#303030"
            android:textSize="@dimen/_10sdp"
            android:typeface="serif" />


        <com.ymb.ratingbar_lib.RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            app:drawable_empty="@drawable/ic_star_inactive"
            app:drawable_filled="@drawable/ic_star_active"
            app:drawable_half="@drawable/ic_star_inactive"
            app:drawable_margin="@dimen/_16sdp"
            app:drawable_size="@dimen/_30sdp"
            app:is_indicator="false"
            app:max_count="5"
            app:rating="0" />

        <LinearLayout
            android:id="@+id/layout_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/layout_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/btn_too_ads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/too_many_ads"
                    android:background="@drawable/bg_option"
                    android:padding="@dimen/_8sdp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"/>

                <TextView
                    android:id="@+id/btn_not_working"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_working"
                    android:background="@drawable/bg_option"
                    android:padding="@dimen/_8sdp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"/>

                <TextView
                    android:id="@+id/btn_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:background="@drawable/bg_option"
                    android:padding="@dimen/_8sdp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:layout_gravity="center"
                    android:id="@+id/edtFeedback"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:background="@drawable/bg_edit_feedback"
                    android:gravity="top"
                    android:hint="@string/send_feedback"
                    android:padding="@dimen/_5sdp"
                    android:textColorHint="#595959"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone">

                </EditText>

                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:background="@drawable/bg_submit"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="#FFF"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="2"
                android:text="@string/later"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp"
                android:typeface="serif" />

            <TextView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="#000"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/header"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/rate_0" />
</RelativeLayout>